project(RayTracer)

# set ( SOURCE_ONE_WEEKEND
#   /main.cpp
#   # src/InOneWeekend/camera.h
#   /color.h
#   /hittable.h
#   /hittable_list.h
#   # src/InOneWeekend/interval.h
#   # src/InOneWeekend/material.h
#   /ray.h
#   /rtweekend.h
#   /sphere.h
#   /vec3.h
# )

add_executable(RayTracer main.cpp)